[project]
name = "lzhasyncemailsender"
version = "1.0"
description = "带有队列的异步邮件发送模块"
authors = [
    { name = "lzh", email = "zhhtdm@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib"
]

[project.urls]
Homepage = "https://github.com/zhhtdm/async-email-sender"
Repository = "https://github.com/zhhtdm/async-email-sender"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
